--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,10 @@
 {deps,
   [
    {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", {branch, "master"}}}
+   ,{mimetypes, ".*", {git, "https://github.com/spawngrid/mimetypes.git", {branch, "master"}}}
+   ,{mochiweb, ".*", {git, "https://github.com/mochi/mochiweb.git", {branch, "master"}}}
+   ,{jsonx, ".*", {git, "https://github.com/iskra/jsonx.git", {branch, "master"}}}
+   ,{sync, ".*", {git, "https://github.com/rustyio/sync.git", {branch, "master"}}}
   ]}.
 
 {sub_dirs, ["rel"]}.
